@@ -5,8 +5,13 @@ using System.Text;
 using System.Threading.Tasks;
 using System.Xml.Serialization;
 using Microsoft.Xna.Framework;
+using Microsoft.Xna.Framework.Graphics;
 using Netcode;
+using Omegasis.Revitalize.Framework.Crafting;
+using Omegasis.Revitalize.Framework.Utilities;
 using Omegasis.Revitalize.Framework.World.Objects.InformationFiles;
+using Omegasis.Revitalize.Framework.World.Objects.Interfaces;
+using Omegasis.StardustCore.Animations;
 using StardewValley;
 using StardewValley.Network;
 
@@ -19,28 +24,33 @@ namespace Omegasis.Revitalize.Framework.World.Objects.Crafting
         /// A mapping from the name of the crafting book to the name of the crafting recipe to unlock.
         /// </summary>
         public readonly NetStringDictionary<string, NetString> craftingRecipesToUnlock = new();
+        public NetRef<Drawable> itemToDraw = new NetRef<Drawable>();
+
 
         public Blueprint()
         {
 
         }
 
-        public Blueprint(BasicItemInformation Info, string CraftingRecipeBookName, string CraftingRecipe ) : base(Info)
+        public Blueprint(BasicItemInformation Info, string CraftingRecipeBookName, string CraftingRecipe, Drawable itemToDraw =null ) : base(Info)
         {
             this.addCraftingRecipe(CraftingRecipeBookName, CraftingRecipe);
+            this.itemToDraw.Value = itemToDraw;
         }
 
-        public Blueprint(BasicItemInformation Info, Dictionary<string,string> CraftingRecipesToUnlock) : base(Info)
+        public Blueprint(BasicItemInformation Info, Dictionary<string,string> CraftingRecipesToUnlock, Drawable itemToDraw = null) : base(Info)
         {
             this.addCraftingRecipe(CraftingRecipesToUnlock);
+            this.itemToDraw.Value = itemToDraw;
         }
 
-        public Blueprint(BasicItemInformation Info, NetStringDictionary<string, NetString> CraftingRecipesToUnlock) : base(Info)
+        public Blueprint(BasicItemInformation Info, NetStringDictionary<string, NetString> CraftingRecipesToUnlock, Drawable itemToDraw = null) : base(Info)
         {
             foreach (var craftingBookNameToCraftingRecipeName in CraftingRecipesToUnlock)
             {
                 this.addCraftingRecipe(craftingBookNameToCraftingRecipeName);
             }
+            this.itemToDraw.Value = itemToDraw;
         }
 
         protected virtual void addCraftingRecipe(Dictionary<string,string> CraftingRecipes)
@@ -64,7 +74,7 @@ namespace Omegasis.Revitalize.Framework.World.Objects.Crafting
         protected override void initNetFieldsPostConstructor()
         {
             base.initNetFieldsPostConstructor();
-            this.NetFields.AddField(this.craftingRecipesToUnlock);
+            this.NetFields.AddFields(this.craftingRecipesToUnlock,this.itemToDraw);
         }
 
         public override bool performUseAction(GameLocation location)
@@ -94,9 +104,34 @@ namespace Omegasis.Revitalize.Framework.World.Objects.Crafting
 
         public override Item getOne()
         {
-            Blueprint component = new Blueprint(this.basicItemInformation.Copy(), this.craftingRecipesToUnlock);
+            Blueprint component = new Blueprint(this.basicItemInformation.Copy(), this.craftingRecipesToUnlock, this.itemToDraw.Value!=null? this.itemToDraw.Value.Copy(): new Drawable());
             return component;
         }
 
+        public override void drawInMenu(SpriteBatch spriteBatch, Vector2 location, float scaleSize, float transparency, float layerDepth, StackDrawType drawStackNumber, Color color, bool drawShadow)
+        {
+            if (this.itemToDraw.Value != null)
+            {
+                this.itemToDraw.Value.drawInMenu(spriteBatch, location, scaleSize, .5f, layerDepth, drawStackNumber, color, drawShadow);
+                base.drawInMenu(spriteBatch, location + new Vector2(16, 8), scaleSize * .5f, 1f, layerDepth, drawStackNumber, color, drawShadow);
+                return;
+            }
+            base.drawInMenu(spriteBatch, location, scaleSize, transparency, layerDepth, drawStackNumber, color, drawShadow);
+
+        }
+
+        public override void drawWhenHeld(SpriteBatch spriteBatch, Vector2 objectPosition, Farmer f)
+        {
+            base.drawWhenHeld(spriteBatch, objectPosition, f);
+        }
+
+        protected virtual bool blueprintOutputIsCustomObject()
+        {
+            if(this.itemToDraw.Value!=null && this.itemToDraw.Value is ICustomModObject)
+            {
+                return true;
+            }
+            return false;
+        }
     }
 }
